<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epub Listing App</string>
    <string name="show_info">Selecciona las opciones de búsqueda y entra en dropbox</string>
    <string name="action_settings">Settings</string>
    <string name="enter_button">Entrar a Dropbox</string>
    <string name="recursiveMode">Búsqueda recursiva</string>
    <string name="autoTitle">Mostrar títulos de epubs</string>
    <string name="reListing">Volver al listado</string>
    <string name="welcomeText">Bienvenido</string>
    <string name="titleAdvert">Sustituirá el nombre del archivo por el título del libro</string>
    <string name="recursiveAdvert">Automáticamente buscara por todas las carpetas desde tu directorio raíz y mostrará sólo los archivos epub</string>
    

    <string-array name="order_array">
        <item>Ordenar</item>
        <item>Ordenar por nombre de archivo</item>
        <item>Ordenar por fecha</item>
    </string-array>

    <string name="gridTextViewTitleString">textView</string>
    <string name="gridTextViewDateString">textView</string>
    <string name="title_activity_epub_cover">EpubCoverActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
